데미지와 카드 선택 로직 추가

--- a/src/pages/Calculate/CalculatePageStyle.css
+++ b/src/pages/Calculate/CalculatePageStyle.css
@@ -1,12 +1,7 @@
 .CalculatePage {
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     display: flex;
 }
 
-.CardTable {
-    display: flex;
-    justify-content: space-around;
-    max-width: 1200px;
-    width: 80%;
-}
